<resources>
    <string name="app_name">AfriLang</string>

    <string name="title_activity_school_registration">School Registration</string>
    <string name="register_a_school">Register School</string>
    <!-- Strings used for fragments for navigation -->
    <string name="add_student_fragment_label">Add Student Fragment</string>
    <string name="register_school_fragment_label">Register School Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_a_student">Add a Student</string>
    <string name="add_more_students">(click this plus sign to add more students)</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Telephone Number</string>
    <string name="submit">submit</string>
    <string name="school_registration">School Registration</string>
    <string name="register_nursery_school">Register as Nursery School</string>
    <string name="register_primary_school">Register as Primary School</string>
    <string name="register_as_secondary">Register as Secondary School</string>
    <string name="register_college">Register as College</string>
    <string name="register_as_polytechnic">Register as Polytechnic</string>
    <string name="register_as_university">Register as University</string>
    <string name="register_school">Register Your School</string>
    <string name="register_school_description">Register below as: </string>
    <string name="school_name">School Name</string>
    <string name="school_address">School Address</string>
    <string name="continue_button">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_all_languages">Select language(s)</string>
    <string name="language_not_available">Language not available yet</string>
    <string name="student_id_number">Student Identity Number</string>
    <string name="number_of_students_added">Number of Students Added</string>
    <string name="finish">Finish</string>


    <string name="text_welcome">Welcome To AfriLang</string>
    <string name="school_profile_title">School Profile</string>
    <string name="school_profile_logo_description">school logo</string>
    <string name="number_of_students">Number of Students</string>
    <string name="print">print</string>
    <string name="student_assessment">Student Test/Exam</string>
    <string name="private_user">private_user</string>
    <string name="register">Register</string>
    <string name="confirm_registration">Confirm Registration</string>
    <string name="languages">Languages</string>
    <string name="school_country">school country</string>

    <!--    user type selection array-->
    <string-array name="type_of_user">
        <item>Private User</item>
        <item>Student</item>
        <item>School</item>
    </string-array>

    <!--    school names selection array-->
    <string-array name="school_name">
        <item>School A</item>
        <item>School B</item>
        <item>School C</item>
        <item>School D</item>
        <item>School E</item>
        <item>School F</item>
        <item>School I</item>
        <item>School J</item>
        <item>School K</item>
        <item>School L</item>
        <item>School M</item>
    </string-array>

    <!--    language selection array-->
    <string-array name="language_name">
        <item>Language A</item>
        <item>Language B</item>
        <item>Language C</item>
        <item>Language D</item>
        <item>Language E</item>
        <item>Language F</item>
        <item>Language I</item>
    </string-array>

    <!--    class selection array-->
    <string-array name="class_name">
        <item>Class 1</item>
        <item>Class 2</item>
        <item>Class 3</item>
        <item>Class 4</item>
        <item>Class 5</item>
        <item>Class 6</item>
        <item>Class 7</item>
    </string-array>

    <!--    report type selection array-->
    <string-array name="report_type">
        <item>Test</item>
        <item>Exam</item>
    </string-array>

    <!--    topic type selection array-->
    <string-array name="topic">

        <item>Topic 1</item>
        <item>Topic 2</item>
        <item>Topic 3</item>
        <item>Topic 4</item>
        <item>Topic 5</item>
        <item>Topic 6</item>
    </string-array>

</resources>